# advent-of-code-2024

./: .gitignore  CMakeLists.txt  main.c
src/1/: advent-of-code-1.c  advent-of-code-1.h
src/2/: advent-of-code-2.c  advent-of-code-2.h
src/3/: advent-of-code-3.c  advent-of-code-3.h
src/util/: file.c  file.h  string.c  string.h
